omg somehow this stops the layout from breaking
when the text is too long, it just stops working. why? who knows.

with width: 20%, it looks like this: http://files.arko.net/image/0n061R143C45/Image%202014-04-20%20at%208.39.25%20PM.png

with width: 300px, it looks like this: http://files.arko.net/image/2b381U111w3U/Image%202014-04-20%20at%208.39.50%20PM.png

¯\_(ツ)_/¯

--- a/source/stylesheets/application.sass
+++ b/source/stylesheets/application.sass
@@ -90,7 +90,7 @@ code
 
 #sidebar
   +flexbox(vertical, right)
-  width: 20%
+  width: 300px
   margin-top: 23.5px
   padding: 0 15px
   text-align: left
